# SwitchMQ-Server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  supervisord.conf
mbserver/: credentials.json  env.example  exchangeHandler.py  mbexceptions.py  mbhandler.py  mbserver.py  utilServer.py
mbserver/routes/: login.py  uiPage.py
mbserver/src/: adminUI.html  error.html  index.html  loginPage.html
mbserver/utils/: exchangeHandlerUtils.py  jwtUtils.py  responsePages.py  routeUtils.py  utilsHelper.py
